# SDL2TankGame

./: .gitattributes  .gitignore  CMakeLists.txt  README.md
assets/levels/level1/: map.json  music.json  player.json  projectiles.json  tanks.json
assets/textures/background/: background.xcf
assets/textures/entities/projectiles/: shell.xcf
assets/textures/entities/vehicles/: tank.xcf  turret.xcf
assets/textures/tiles/bricks/: brick_a.xcf  brick_b.xcf  wall.xcf
assets/textures/tiles/ground/: grass.xcf  mud.xcf
src/: main.cpp
src/core/: game.cpp  game.h
src/entities/base/: dynamic_entity.cpp  dynamic_entity.h  entity.cpp  entity.h  static_entity.cpp  static_entity.h
src/entities/projectiles/: projectile.cpp  projectile.h  shell.cpp  shell.h
src/entities/tanks/: tank.cpp  tank.h  tank_movements.h
src/entities/tanks/cartridge/: cartridge.cpp  (+1 more)
src/entities/tiles/: brick.cpp  brick.h  ground_tile.cpp  ground_tile.h
src/managers/: audio_manager.cpp  audio_manager.h  entity_manager.cpp  entity_manager.h  game_state_manager.cpp  game_state_manager.h  input_manager.cpp  input_manager.h  resource_manager.cpp  resource_manager.h
src/properties/: cartridge_property.h  chassis_property.h  projectile_property.h  tank_property.h  tile_property.h  turret_property.h
src/utils/: cartridge_property.h  map_parser.cpp  map_parser.h  music_parser.cpp  music_parser.h  player_parser.cpp  player_parser.h  projectile_parser.cpp  projectile_parser.h  projectile_property.h  sdl_utils.cpp  sdl_utils.h  tank_parser.cpp  tank_parser.h  texture_info.h  tile_property.h
(+4 files in other folders)
